[package]
name = "aws-solana-drm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.118"
serde_json = "1.0.60"
solana-client = "1.9.2"
solana-logger = "1.9.2"
solana-sdk = "1.9.2"
image = "0.24.1"

[dependencies.rocket]
features = ["json", "msgpack", "uuid"]